@@ -1,5 +1,7 @@
 from ftw.builder.archetypes import ArchetypesBuilder
 from ftw.builder import builder_registry
+from ftw.builder.dexterity import DexterityBuilder
+import os
 
 
 class SubsiteBuilder(ArchetypesBuilder):
@@ -13,5 +15,19 @@ class SubsiteBuilder(ArchetypesBuilder):
         else:
             return self.having(forcelanguage=language_code)
 
+    def with_dummy_logo(self):
+        png_file = os.path.join(
+            os.path.dirname(os.path.realpath(__file__)),
+            'blue.png',
+        )
+        logo = open(png_file, 'r')
+        self.arguments['logo'] = logo
+        return self
 
 builder_registry.register('subsite', SubsiteBuilder)
+
+
+class ExampleDxTypeBuilder(DexterityBuilder):
+    portal_type = 'ExampleDxType'
+
+builder_registry.register('example dx type', ExampleDxTypeBuilder)
