@@ -4,7 +4,8 @@ Changelog
 1.4.5 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Render the subsite logo when creating content.
+  [mbaechtold]
 
 
 1.4.4 (2015-12-23)
